[fix]truncateの最大文字数の変更
それぞれにtruncateの文字の最大数を修正しました。

--- a/app/assets/stylesheets/k_doramas.scss
+++ b/app/assets/stylesheets/k_doramas.scss
@@ -68,3 +68,7 @@
   background-color: #00B900;
   color: white;
 }
+
+.hide {
+  display: none;
+}
